[package]
name = "anni-repo-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
anni-repo = { git = "https://github.com/snylonue/anni.git", branch = "overlay", features = ["db-write"]}